# RasPI_Prank_Sensor

./: CMakeLists.txt  LICENSE
include/audio/: audiofile.hpp  audioplayer.hpp
include/sensor/: hcsr04.hpp  pinconfig.hpp  pinrole.hpp  sensor.h  sensorconfig.hpp  sensorfactory.hpp  sensormetadata.hpp  sensortype.hpp
include/setup/: pinoption.hpp  sensoroption.hpp  setupconfig.hpp  setupmenu.hpp
src/: main.cpp
src/audio/: audiofile.cpp  audioplayer.cpp
src/sensor/: hcsr04.cpp  sensorfactory.cpp  sensormetadata.cpp
src/setup/: setupmenu.cpp
